--- a/styles.css
+++ b/styles.css
@@ -95,8 +95,23 @@ header{
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    
+    transition: all 1s ease;
 }
+
+ 
+    @keyframes sqFade {
+
+        0%{
+            transform:scale(1)
+        }
+        50%{
+            transform:scale(1.3)
+        }
+        100%{
+            transform:scale(1)
+        }
+        
+    }
 
 .gameSettings{
     background:linear-gradient(to left,blue,red);
@@ -117,10 +132,8 @@ header{
     margin: 5px;
 }
 .bottom{
-    margin-left: auto;
-    margin-right: auto;
     display: flex;
-    justify-content: space-evenly;
+    justify-content:space-around;
     padding: 4px;
 }
 
