--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body{
     padding: 10px;
     display: flex;
     width: 100%;
+    text-shadow: 0 0 5px #FFF, 0 0 1px #FFF
 }
 small{
     font-size: 8px;
@@ -39,6 +40,15 @@ small{
     margin-left: 5px;
     border-radius: 10px;
     width: 75%;
+    animation: zahi 6s ease infinite forwards;
+}
+
+@keyframes zahi {
+
+    0%{background-color: red; }
+    20%{background-color: blue; }
+    70%{ background-color: purple;}
+    100%{background-color: red;}
 }
 
 .goesFirst{
@@ -49,6 +59,7 @@ small{
     height: 40px;
     font-size: 30px;
     color: white;
+    text-shadow: 0 0 5px #FFF, 0 0 1px #FFF
     
 }
 
@@ -89,13 +100,14 @@ header{
     -webkit-text-fill-color: transparent;
 }
 .square{
-    background-color: rgba(255, 255, 255, 0.092);
+    background-color: rgba(241, 240, 241, 0.104);
     display: flex;
     font-size: 60px;
     justify-content: center;
     align-items: center;
     overflow: hidden;
     transition: all 1s ease;
+    
 }
 
  
@@ -158,19 +170,20 @@ button:hover{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%) scale(0);
     z-index: 10;
     height: 100px;
     width: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: 0.5s ease ;
-    opacity: 90%;
+    transition:all 0.5s ease ;
+    opacity: 80%;
     border-radius: 20px;
     font-size: 40px;
     text-align: center;
+    transform:translate(-50%,-50%) scale(0);
 }
+
 
 .fadeIn{
     
@@ -185,7 +198,8 @@ button:hover{
     }
 
     .winnerBanner{
-        width: 350px;
+        width: 200px;
+        height: 200px;
     }
 
     button, input{
