--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body{
     border-radius: 20px;
     width: 500px;
     transition: all .2s ease;
+    background-color: rgba(0, 0, 0, 0.771);
 }
 
 .title{
@@ -98,6 +99,7 @@ header{
     background:linear-gradient(to left,blue,red);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    
 }
 .square{
     background-color: rgba(241, 240, 241, 0.104);
@@ -107,23 +109,20 @@ header{
     align-items: center;
     overflow: hidden;
     transition: all 1s ease;
-    
+    opacity: 1;
+    border-radius: 10px;
 }
 
- 
-    @keyframes sqFade {
+.squareHover:hover{
+    cursor: pointer;
+    background-color: rgba(43, 42, 42, 0.434);
+}
 
-        0%{
-            transform:scale(1)
-        }
-        50%{
-            transform:scale(1.3)
-        }
-        100%{
-            transform:scale(1)
-        }
-        
-    }
+.selected{
+    background-color: rgba(241, 240, 241, 0.104);
+    pointer-events: none;
+}
+ 
 
 .gameSettings{
     background:linear-gradient(to left,blue,red);
@@ -158,11 +157,16 @@ button, input{
     
 }
 
-button:hover{
+button:hover, button:focus , button:active{
     background-color: red;
     color: white;
     transition: all .2s ease;
     cursor: pointer;
+    border: 3px solid white;
+}
+
+button:after{
+    background-color: red;
 }
 
 .winnerBanner{
