--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ button, input{
     
 }
 
-button:hover, button:focus , button:active{
+button:hover, button:focus{
     background-color: red;
     color: white;
     transition: all .2s ease;
@@ -165,12 +165,15 @@ button:hover, button:focus , button:active{
     border: 3px solid white;
 }
 
-button:after{
+.btnClick{
     background-color: red;
+    color: white;
+    border: 3px solid white;
 }
 
+
 .winnerBanner{
-    background:linear-gradient(to left,blue,red);
+    background:linear-gradient(to left,rgba(0, 0, 255, 0.386),rgba(255, 0, 0, 0.548));
     position: absolute;
     top: 50%;
     left: 50%;
@@ -181,11 +184,12 @@ button:after{
     justify-content: center;
     align-items: center;
     transition:all 0.5s ease ;
-    opacity: 80%;
     border-radius: 20px;
     font-size: 40px;
     text-align: center;
     transform:translate(-50%,-50%) scale(0);
+    backdrop-filter: blur(10px);
+    
 }
 
 
